css/style.css
* {
    box-sizing: border-box;
}

body {
    background-color: antiquewhite;
    height: 95vh;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.table, .pop-up {
    margin-block-start: 3%;
}
.add{
    place-self: end;
}

table {
    background-color: rgb(191, 191, 191);
}

thead {
    font-weight: bold;
    background-color: rgb(180, 168, 168);
}

tr {
    height: 2em;
    width: max-content;
}

tbody tr:nth-child(even) {
    background-color: white;
}

tbody tr:nth-child(odd) {
    background-color: rgb(226, 225, 225);
}

.col1, .col2, .col3, .col4 {
    padding-inline-start: 2%;
}

.col3, .col4 {
    width: 13em;
}

.col2 {
    width: 5em;
}

.btns {
    font-weight: bold;
    text-align: center;
}

.read, .update, .delete {
    border: none;
    border-radius: 10%;
    height: 2em;
    font-weight: bold;
}

.read {
    background-color: lightblue;
}

.update {
    background-color: rgb(241, 228, 86);
}

.delete {
    background-color: orange;
}


.top-square {
    background-color: rgba(180, 156, 156, 0.443); 
}

.filter-and-sort {
    display:flex;
    justify-content: space-between;
}

.book-list, .sort-by select {
    width: 10em;
}

.search {
    grid-area: search;
}


img {
    height: 10em;
}

.hidden {
    display:none;
}

.pop-up{
    position:absolute;
    top: 7em;
    background-color: rgb(234, 215, 137);
    padding-inline: 0.5em;
    border-radius: 20%;  
}

footer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;

    background-color: rgba(180, 156, 156, 0.443); 
    height: fit-content;
}

.book-edit-modal form {
    background-color: rgba(239, 183, 110, 0.567);
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
   
}

.book-title, .book-price, .actions {
    margin-block: 2%;
}

.book-details form {
    display:flex;
    flex-direction:column;
    place-items: center;
}

.close-btn {
    place-self: start;
}

.actions {
    position: absolute;
    right: 2%;
    left: 2%;
    top: 5em;
    display: flex;
    justify-content: space-between;
}

.actions btn:nth-child(2){
    justify-self: flex-end;
}

